# Resawod_nubapp

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  README.md  book.py  docker-compose example.yml  docker-compose.yaml  docker-compose.yml  pyproject.toml
personal_data/: data.json.example
src/: check_crontab.py  main.py
src/personal_data/: data.json.example
